tests/reference/asr-test_goto-ba9fd22.stderr
semantic error: Label 'end' is not defined in 'f'
 --> tests/errors/test_goto.py:8:13
  |
8 |             goto .end
  |             ^^^^^^^^^ 
